fix: chat and noti